<resources>
    <string name="app_name">Social Graffiti</string>
    <string name="action_logout">Sign Out</string>

    <string name="action_sign_in_short">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Sign up now!</string>
    <string name="btn_link_to_login">Already registered? Click to log in!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please enter the email address you used to register.</string>


    <string name="button_new_pin">New Tag</string>

    <string name="text_new_pin">Your New Tag</string>
    <string name="textbox_hint"> Enter your message here</string>
    <string name="text_add_pic">Add a Picture</string>
    <string name="text_chooseDuration">Choose Duration</string>
    <string name="text_duration">0 Hours</string>

    <string name="button_pic">Take Photo</string>
    <string name="button_reset_pic">Reset Photo</string>
    <string name="button_submit">Tag It!</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_activity_map">Nearby Tags</string>
</resources>

