<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comp150.socialgraffiti.NewPostActivity">

    <TextView
        android:id="@+id/text_newPin"
        android:text="@string/text_new_pin"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/image_thumbnail"
        android:src="@android:drawable/ic_menu_camera"
        android:background="@drawable/textbox_border"
        android:scaleType="centerCrop"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/text_newPic"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_submitPost"
        android:text="@string/button_submit"
        android:onClick="submitPost"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_width="130dp" />

    <Button
        android:id="@+id/button_cancel"
        android:text="@string/button_cancel"
        android:onClick="cancelPost"
        android:layout_height="wrap_content"
        android:layout_width="130dp"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/text_chooseDuration"
        android:text="@string/text_chooseDuration"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_takePic"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:id="@+id/seekbar_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="23"
        android:progress="0"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/text_chooseDuration"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/text_duration"
        android:text="@string/text_duration"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/seekbar_duration"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_resetPic"
        android:text="@string/button_reset_pic"
        android:onClick="resetPhoto"
        android:background="@color/colorAccent"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_chooseDuration"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button_takePic"
        android:text="@string/button_pic"
        android:onClick="openCamera"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:elevation="0dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/image_thumbnail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/text_message"
        android:hint="@string/textbox_hint"
        android:lines="2"
        android:minLines="2"
        android:maxLines="2"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_newPin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/text_newPic"
        android:text="@string/text_add_pic"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/text_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
